--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 					<div class="avatar">
 						<img src="img/header/1.jpg" alt="">
 					</div>
-					<h3><span>[2023]-璀璨龙城服务器</span> 啥也不会的小伙</h3>
+					<h3><span>[2023]-璀璨龙城服务器</span> 摆烂的小皓</h3>
 					<p class="quote">当前服务器在线 <a href="#contact" class="anchor"><span data-playercounter-ip="cclc2023.top:12345">0</span></a> 人</p>
 					<ul class="contact_info">
 						<li>
